Synchronous processing of fetch requests when opening catalog. Fixed the display of information in the course card: the text no longer pops out of bounds.

--- a/frontend/src/components/CoursePreview/CoursePreview.module.scss
+++ b/frontend/src/components/CoursePreview/CoursePreview.module.scss
@@ -18,7 +18,10 @@
     .courseDetails {
       text-align: center;
       margin-top: 8px;
-      color: rgb(15, 125, 130);;
+      color: rgb(15, 125, 130);
+      text-overflow: ellipsis;
+      overflow: hidden;
+      max-width: 100%;
     }
 
     .courseLink {
